force-app/main/default/objects/Film__c/Film__c.object-meta.xml
<CustomObject>
    <label>Film</label>
    <nameField>
        <label>Film Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Films</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>