force-app/main/default/objects/Film__c/fields/Audio__c.field-meta.xml
<CustomField>
    <fullName>Audio__c</fullName>
    <label>Audio</label>
    <type>TextArea</type>
</CustomField>