force-app/main/default/objects/Film__c/fields/Cast__c.field-meta.xml
<CustomField>
    <fullName>Cast__c</fullName>
    <label>Cast</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>