force-app/main/default/objects/Film__c/fields/FormatOfVideo__c.field-meta.xml
<CustomField>
    <fullName>FormatOfVideo__c</fullName>
    <label>FormatOfVideo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>