force-app/main/default/objects/Film__c/fields/LengthOfFilm__c.field-meta.xml
<CustomField>
    <fullName>LengthOfFilm__c</fullName>
    <label>LengthOfFilm</label>
    <length>128</length>
    <type>Text</type>
</CustomField>