force-app/main/default/objects/Film__c/fields/OriginalAudio__c.field-meta.xml
<CustomField>
    <fullName>OriginalAudio__c</fullName>
    <label>OriginalAudio</label>
    <length>128</length>
    <type>Text</type>
</CustomField>