force-app/main/default/objects/Film__c/fields/QualityOfVideo__c.field-meta.xml
<CustomField>
    <fullName>QualityOfVideo__c</fullName>
    <label>QualityOfVideo</label>
    <type>TextArea</type>
</CustomField>