force-app/main/default/objects/Film__c/fields/Subtitles__c.field-meta.xml
<CustomField>
    <fullName>Subtitles__c</fullName>
    <label>Subtitles</label>
    <length>128</length>
    <type>Text</type>
</CustomField>