force-app/main/default/objects/Film__c/fields/Translation__c.field-meta.xml
<CustomField>
    <fullName>Translation__c</fullName>
    <label>Translation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>