force-app/main/default/objects/Film__c/fields/YearOfProduction__c.field-meta.xml
<CustomField>
    <fullName>YearOfProduction__c</fullName>
    <label>YearOfProduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>